# Panda_mujoco

./: CMakeLists.txt  README.md  package.xml
config/: controller.yaml  so101_teleop.yaml  start_position.xml
franka_emika_panda/: panda.urdf  panda.xml  panda_with_camera.xml  scene.xml
franka_emika_panda/URDF/: so101.urdf
franka_emika_panda/meshes/: converted_hand_0_e6ebedff.mtl  converted_link6_12_00ff00ff.mtl  converted_link6_7_0a8ac7ff.mtl
launch/: panda.launch.py  so101.launch.py
scripts/: so101.py
src/: panda_ik.cpp
